<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/allSensorList"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginLeft="6dp"
    android:layout_marginEnd="6dp"
    android:layout_marginRight="6dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/sensor_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/gray_400"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="24dp"
        card_view:cardElevation="0dp"
        card_view:elevation="1dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/sensorIcon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/panel"
                    android:padding="8dp"
                    android:src="@drawable/ic_round_settings_24"
                    android:contentDescription="@string/panel"
                    app:tint="@color/gray_800"/>

                <TextView
                    android:id="@+id/sensorDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/degree"
                    android:textColor="@color/gray_800"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sensorPrefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/percent"
                    android:textColor="@color/gray_800"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/brandon"
                    android:text="@string/sensor_name"
                    android:textColor="@color/gray_800"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgDivider"
                    android:layout_width="2dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:src="@color/gray_800"
                    android:contentDescription="@string/icon" />

                <TextView
                    android:id="@+id/sensorNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/sensor_num"
                    android:textColor="@color/gray_800"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>