<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/light_panel"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:clickable="false"
        android:focusable="false"
        android:paddingHorizontal="28dp"
        android:paddingBottom="30dp"
        app:backgroundTint="@color/white"
        app:cornerRadius="24dp"
        app:icon="@drawable/ic_baseline_wb_sunny_24"
        app:iconSize="35dp"
        app:iconTint="@color/gray_800"
        app:layout_constraintEnd_toStartOf="@+id/window_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/window_panel"
        app:rippleColor="#304FFE" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/window_panel"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:clickable="false"
        android:focusable="false"
        android:paddingHorizontal="28dp"
        android:paddingBottom="30dp"
        app:backgroundTint="@color/white"
        app:cornerRadius="24dp"
        app:icon="@drawable/ic_baseline_info_24"
        app:iconSize="35dp"
        app:iconTint="@color/gray_800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002"
        app:rippleColor="#304FFE" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/heater_panel"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:focusable="false"
        android:paddingHorizontal="28dp"
        android:paddingBottom="30dp"
        app:backgroundTint="@color/white"
        app:cornerRadius="24dp"
        app:icon="@drawable/ic_baseline_info_24"
        app:iconSize="35dp"
        app:iconTint="@color/gray_800"
        app:layout_constraintEnd_toEndOf="@+id/light_panel"
        app:layout_constraintStart_toStartOf="@+id/light_panel"
        app:layout_constraintTop_toBottomOf="@+id/light_panel"
        app:rippleColor="#304FFE" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/heater2_panel"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:clickable="false"
        android:focusable="false"
        android:paddingHorizontal="28dp"
        android:paddingBottom="30dp"
        app:backgroundTint="@color/white"
        app:cornerRadius="24dp"
        app:icon="@drawable/ic_baseline_info_24"
        app:iconSize="35dp"
        app:iconTint="@color/gray_800"
        app:layout_constraintEnd_toEndOf="@+id/window_panel"
        app:layout_constraintStart_toStartOf="@+id/window_panel"
        app:layout_constraintTop_toTopOf="@+id/heater_panel"
        app:rippleColor="#304FFE" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/heater3_panel"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:clickable="false"
        android:focusable="false"
        android:paddingHorizontal="28dp"
        android:paddingBottom="30dp"
        app:backgroundTint="@color/white"
        app:cornerRadius="24dp"
        app:icon="@drawable/ic_baseline_info_24"
        app:iconSize="35dp"
        app:iconTint="@color/gray_800"
        app:layout_constraintEnd_toEndOf="@+id/drop_panel"
        app:layout_constraintStart_toStartOf="@+id/drop_panel"
        app:layout_constraintTop_toTopOf="@+id/heater2_panel"
        app:rippleColor="#304FFE" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/water_panel"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:focusable="false"
        android:paddingHorizontal="28dp"
        android:paddingBottom="30dp"
        app:backgroundTint="@color/white"
        app:cornerRadius="24dp"
        app:icon="@drawable/ic_baseline_info_24"
        app:iconSize="35dp"
        app:iconTint="@color/gray_800"
        app:layout_constraintEnd_toEndOf="@+id/heater_panel"
        app:layout_constraintStart_toStartOf="@+id/heater_panel"
        app:layout_constraintTop_toBottomOf="@+id/heater_panel"
        app:rippleColor="#304FFE" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/drop_panel"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:clickable="false"
        android:focusable="false"
        android:paddingHorizontal="28dp"
        android:paddingBottom="30dp"
        app:backgroundTint="@color/white"
        app:cornerRadius="24dp"
        app:icon="@drawable/ic_baseline_info_24"
        app:iconSize="35dp"
        app:iconTint="@color/gray_800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/window_panel"
        app:layout_constraintTop_toTopOf="@+id/window_panel"
        app:rippleColor="#304FFE" />


    <TextView
        android:id="@+id/heaterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="8dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-light"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/heater"
        android:textColor="@color/gray_800"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/heater_panel"
        app:layout_constraintEnd_toEndOf="@+id/heater_panel"
        app:layout_constraintStart_toStartOf="@+id/heater_panel"
        app:layout_constraintTop_toTopOf="@+id/heater_panel"
        app:layout_constraintVertical_bias="0.78" />


    <TextView
        android:id="@+id/heater2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="8dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-light"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/heater2"
        android:textColor="@color/gray_800"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/heater2_panel"
        app:layout_constraintEnd_toEndOf="@+id/heater2_panel"
        app:layout_constraintStart_toStartOf="@+id/heater2_panel"
        app:layout_constraintTop_toTopOf="@+id/heater2_panel"
        app:layout_constraintVertical_bias="0.78" />


    <TextView
        android:id="@+id/heater3Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="8dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-light"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/heater3"
        android:textColor="@color/gray_800"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/heater3_panel"
        app:layout_constraintEnd_toEndOf="@+id/heater3_panel"
        app:layout_constraintStart_toStartOf="@+id/heater3_panel"
        app:layout_constraintTop_toTopOf="@+id/heater3_panel"
        app:layout_constraintVertical_bias="0.78" />

    <TextView
        android:id="@+id/lightName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="8dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-light"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/light"
        android:textColor="@color/gray_800"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/light_panel"
        app:layout_constraintEnd_toEndOf="@+id/light_panel"
        app:layout_constraintStart_toStartOf="@+id/light_panel"
        app:layout_constraintTop_toTopOf="@+id/light_panel"
        app:layout_constraintVertical_bias="0.78" />

    <TextView
        android:id="@+id/windowName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="8dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-light"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/window"
        android:textColor="@color/gray_800"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/window_panel"
        app:layout_constraintEnd_toEndOf="@+id/window_panel"
        app:layout_constraintStart_toStartOf="@+id/window_panel"
        app:layout_constraintTop_toTopOf="@+id/window_panel"
        app:layout_constraintVertical_bias="0.78" />

    <TextView
        android:id="@+id/waterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="8dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-light"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/drop_pump"
        android:textColor="@color/gray_800"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/water_panel"
        app:layout_constraintEnd_toEndOf="@+id/water_panel"
        app:layout_constraintStart_toStartOf="@+id/water_panel"
        app:layout_constraintTop_toTopOf="@+id/water_panel"
        app:layout_constraintVertical_bias="0.78" />

    <TextView
        android:id="@+id/dropName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="8dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-light"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/water_pump"
        android:textColor="@color/gray_800"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/drop_panel"
        app:layout_constraintEnd_toEndOf="@+id/drop_panel"
        app:layout_constraintStart_toStartOf="@+id/drop_panel"
        app:layout_constraintTop_toTopOf="@+id/drop_panel"
        app:layout_constraintVertical_bias="0.78" />

</androidx.constraintlayout.widget.ConstraintLayout>